[package]
name = "casino"
version = "0.2.0"
authors = ["Eben <ebenvosloo2001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
serde = {version = "1.0.152", features = ["derive"] }
rand = "0.8.5"